// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DarkModeToggle renders darkMode value null (default) 1`] = `
<DocumentFragment>
  <div
    data-cy="darkModeToggle"
  >
    <div
      class="className"
      style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 12px; transition: opacity 0.25s; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none;"
    >
      <div
        class="react-switch-bg"
        style="height: 24px; width: 48px; margin: 0px; position: relative; background: rgb(0, 0, 0); border-radius: 12px; cursor: pointer; transition: background 0.25s;"
      >
        <div
          style="height: 24px; width: 25px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
        >
          <div
            style="display: flex; justify-content: center; align-items: center; height: 100%; font-size: 15px; color: yellow; padding-right: 2px;"
          >
            ☾
          </div>
        </div>
        <div
          style="height: 24px; width: 25px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
        >
          <div
            style="display: flex; justify-content: center; align-items: center; height: 100%; font-size: 15px; color: yellow; padding-left: 2px;"
          >
            ☀
          </div>
        </div>
      </div>
      <div
        class="react-switch-handle"
        style="height: 24px; width: 24px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(0px); top: 0px; outline: 0; box-shadow: inset 0 0 0 1px #000; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
      />
      <input
        aria-checked="false"
        aria-label="dark mode switch"
        role="switch"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
        title="dark mode switch"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DarkModeToggle renders darkMode value true 1`] = `
<DocumentFragment>
  <div
    data-cy="darkModeToggle"
  >
    <div
      class="className"
      style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 12px; transition: opacity 0.25s; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); user-select: none;"
    >
      <div
        class="react-switch-bg"
        style="height: 24px; width: 48px; margin: 0px; position: relative; background: rgb(0, 0, 0); border-radius: 12px; cursor: pointer; transition: background 0.25s;"
      >
        <div
          style="height: 24px; width: 25px; position: relative; opacity: 1; pointer-events: none; transition: opacity 0.25s;"
        >
          <div
            style="display: flex; justify-content: center; align-items: center; height: 100%; font-size: 15px; color: yellow; padding-right: 2px;"
          >
            ☾
          </div>
        </div>
        <div
          style="height: 24px; width: 25px; position: absolute; opacity: 0; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
        >
          <div
            style="display: flex; justify-content: center; align-items: center; height: 100%; font-size: 15px; color: yellow; padding-left: 2px;"
          >
            ☀
          </div>
        </div>
      </div>
      <div
        class="react-switch-handle"
        style="height: 24px; width: 24px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(24px); top: 0px; outline: 0; box-shadow: inset 0 0 0 1px #000; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
      />
      <input
        aria-checked="true"
        aria-label="dark mode switch"
        checked=""
        role="switch"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
        title="dark mode switch"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;
